@@ -1,13 +1,28 @@
 <?xml version="1.0" encoding="utf-8" standalone="no" ?>
-<cuts:node xmlns="http://www.dre.vanderbilt.edu/CUTS"
-           xmlns:cuts="http://www.dre.vanderbilt.edu/CUTS"
+<cuts:node xmlns="http://www.dre.vanderbilt.edu/CUTS/schemas"
+           xmlns:cuts="http://www.dre.vanderbilt.edu/CUTS/schemas"
            xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-           xsi:schemaLocation="http://www.dre.vanderbilt.edu/CUTS cutsnode.xsd">
+           xsi:schemaLocation="http://www.dre.vanderbilt.edu/CUTS/schemas cutsnode.xsd">
 
-  <tasklist>
-    <task id="cuts.logging.client">
-      <executable>${CUTS_ROOT}/bin/cutslog</executable>
-      <arguments> -ORBEndpoint ${REMOTE_ENDPOINT} --port=${LOCALHOST_PORT} --debug --verbose</arguments>
-    </task>
-  </tasklist>
+  <environment id="default" inherit="true" active="true">
+    <startup>
+      <!-- start the logging server -->
+      <process id="cuts.logging.server">
+        <executable>${CUTS_ROOT}/bin/cuts-logging-server</executable>
+        <arguments>-ORBEndpoint iiop://localhost:30000 --register-with-iortable=LoggingServer</arguments>
+      </process>
+
+      <!-- start the logging client -->
+      <process id="cuts.logging.client" delay="2">
+        <executable>${CUTS_ROOT}/bin/cuts-logging-client</executable>
+        <arguments>-ORBEndpoint iiop://localhost:20000 --register-with-iortable=LoggingClient -ORBInitRef LoggingServer=corbaloc:iiop:localhost:30000/LoggingServer --debug -v</arguments>
+      </process>
+
+      <!-- start the test manager -->
+      <process id="cuts.test.manager" delay="2">
+        <executable>${CUTS_ROOT}/bin/cutstest</executable>
+        <arguments>-c cutstest.config --time=10 --debug --verbose</arguments>
+      </process>
+    </startup>
+  </environment>
 </cuts:node>
