@@ -6,9 +6,9 @@
 
   <services>
     <service id="logging">
-      <location>CUTS_Test_Logging_Service</location>
-      <entryPoint>_make_CUTS_Test_Logging_Service</entryPoint>
-      <params>--clients=logging.config</params>
+      <location>CUTS_Testing_Log_Message_Listener</location>
+      <entryPoint>_make_CUTS_Testing_Log_Message_Listener</entryPoint>
+      <params> -ORBInitRef LoggingServer=corbaloc:iiop:localhost:30000/LoggingServer</params>
     </service>
 
     <service id="daemon">
