@@ -15,20 +15,14 @@ $timeout = 10;
 $CUTS_ROOT = "$ENV{'CUTS_ROOT'}";
 $JAVA_HOME = "$ENV{'JAVA_HOME'}";
 
-# spawn the CUTS node daemon
-$node = new PerlACE::Process ("$CUTS_ROOT/bin/cutsnode_d", "-c cutsnode.config -DREMOTE_ENDPOINT=$REMOTE_ENDPOINT -DLOCALHOST_PORT=$LOCALHOST_PORT --debug --verbose");
+# spawn the node daemon; it will manage the processes
+$node = new PerlACE::Process ("$CUTS_ROOT/bin/cutsnode_d", "-c cutsnode.config -v -DTEST_TIMEOUT=$timeout");
 $node->Spawn ();
 
-sleep (3);
-
-# spawn a test manager
-$test = new PerlACE::Process ("$CUTS_ROOT/bin/cutstest", "-c cutstest.config --time=$timeout --debug --verbose");
-$test->Spawn ();
-
-sleep (3);
+sleep (10);
 
 # run the Java application
-$classpath = ".;$CUTS_ROOT/lib/cuts.log4j.jar;$CUTS_ROOT/lib/CUTS.TestLogger.jar;$CUTS_ROOT/lib/cuts.java.jar;$CUTS_ROOT/contrib/java/log4j-1.2.15.jar";
+$classpath = ".;$CUTS_ROOT/lib/cuts.log4j.jar;$CUTS_ROOT/lib/cuts.testing.jar;$CUTS_ROOT/lib/cuts.clientlogger.jar;$CUTS_ROOT/lib/cuts.java.jar;$CUTS_ROOT/contrib/java/log4j-1.2.15.jar";
 $javapp = new PerlACE::Process ("$JAVA_HOME/bin/java", "-classpath $classpath HelloWorld");
 $javapp->SpawnWaitKill ();
 
@@ -37,7 +31,3 @@ sleep ($timeout);
 # kill the CUTS node daemon
 $node->Kill ();
 $node->TimedWait (1);
-
-# kill the test daemon
-$test->Kill ();
-$test->TimedWait (1);
