@@ -1,3 +1,11 @@
+Sat Jan 16 22:35:13 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>
+
+        * examples/java/logging/client/log4j/cutsnode.config:
+        * examples/java/logging/client/log4j/cutstest.config:
+        * examples/java/logging/client/log4j/run_test.pl:
+
+          . Fixed example to work with latest version of CUTS.
+
 Sat Jan 16 21:58:28 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>
 
         * docs/CUTS.smp:
